[metadata]
name = CGDs
version = 0.2.0
author = Hongkai Zheng
author_email = devzhk@gmail.com
description = Adaptive Competitive Gradient Descent optimizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devzhk/cgds-package
project_urls =
    Bug Tracker = https://github.com/devzhk/cgds-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src